--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,1 @@
-<div class="container">
-  <div class="mb-3 mt-2">
-          <label for="input" class="label-control">Yapılacak İş</label>
-          <input class="form-control" id="input" [(ngModel)]="unDoneInput" type="text">
-          <button class="btn btn-primary mt-2" (click)="addDoneInput()">Ekle</button>
-          
-  </div>
-  <div class="row mt-2">
-    <div class="col-md-6">
-      <h3 class="text-primary">Yakılacak İşler Listesi</h3>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let unDone of UnDoneModels"> {{ unDone.title}} 
-          <button class="btn btn-primary mx-4" (click)="complete(unDone)">Tamamlandı</button>
-          <button class="btn btn-danger mx-4" (click)="deleteUnDone(unDone)">Sil</button>
-        </li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3 class="text-success">Tamamlanan İşler Listesi</h3>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let Done of doneModels"> {{ Done.title}}
-          <button class="btn btn-danger" (click)="changeDone(Done)">Sil</button>  
-        </li>
-        
-        
-      </ul>
-    </div>
-
-  </div>
-</div>
+<router-outlet></router-outlet>
